added timing tests

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,6 +12,16 @@
 # Optimization: -Os, -O1, -O2, -O3, -Ofast, -Og, -flto, -fno-lto
 build_flags = -I conf -std=gnu++17 -DCORE_DEBUG_LEVEL=5
 
+[env:timing_test]
+platform = espressif32
+board = esp32dev
+upload_port = /dev/ttyUSB0
+monitor_port = /dev/ttyUSB0
+framework = arduino
+monitor_speed = 115200
+build_src_filter = -<*> +<timing_test.cpp>
+build_flags = ${common.build_flags}
+
 [env:super_loop]
 platform = espressif32
 board = esp32dev
