--- a/platformio.ini
+++ b/platformio.ini
@@ -10,7 +10,7 @@
 
 [common]
 # Optimization: -Os, -O1, -O2, -O3, -Ofast, -Og, -flto, -fno-lto
-build_flags = -I conf -std=gnu++17 -DCORE_DEBUG_LEVEL=5
+build_flags = -I conf -std=gnu++17 -Os
 
 [env:timing_test]
 platform = espressif32
